add android clients

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <body>
   <h1>Podcatcher:</h1>
 
+  <h2>iOS</h2>
+
   <button href="podcat://feeds.br.de/tagesticket-der-frueh-podcast/feed.xml">Podcat</button>
 
   <button href="castro://subscribe/feeds.br.de/tagesticket-der-frueh-podcast/feed.xml">Castro</button>
@@ -30,6 +32,15 @@
   <button href="pktc://subscribe/feeds.br.de/tagesticket-der-frueh-podcast/feed.xml">Pocket Cast</button>
 
   <button href="overcast://x-callback-url/add?url=feeds.br.de/tagesticket-der-frueh-podcast/feed.xml">Overcast</button>
+
+  <h2>Android</h2>
+
+  <button href="pktc://subscribe/feeds.br.de/tagesticket-der-frueh-podcast/feed.xml">Pocket Cast</button>
+
+  <button href="antennapod-subscribe://feeds.br.de/tagesticket-der-frueh-podcast/feed.xmll">AntennaPod</button>
+
+  <button href="podkicker://subscribe/feeds.br.de/tagesticket-der-frueh-podcast/feed.xml">Podkicker</button>
+
 
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="protocolcheck.js"></script>
