--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <button href="pktc://subscribe/feeds.br.de/tagesticket-der-frueh-podcast/feed.xml">Pocket Cast</button>
 
-  <button href="antennapod-subscribe://feeds.br.de/tagesticket-der-frueh-podcast/feed.xmll">AntennaPod</button>
+  <button href="antennapod-subscribe://feeds.br.de/tagesticket-der-frueh-podcast/feed.xml">AntennaPod</button>
 
   <button href="podkicker://subscribe/feeds.br.de/tagesticket-der-frueh-podcast/feed.xml">Podkicker</button>
 
